--- a/brain/viewer/viewer.html
+++ b/brain/viewer/viewer.html
@@ -29,8 +29,10 @@
 <div id="vizualize"></div>
 
 <div style="clear: both; ">
-    <label><input type="checkbox" id="layer-edges" checked="checked"> edges</label>
-    <label><input type="checkbox" id="layer-brightRed" checked="checked"> brightRed</label>
+    <label><input type="checkbox" id="layer-edgesAny" checked="checked"> edgesAny</label>
+    <label><input type="checkbox" id="layer-edgesSuppressLight"> edgesSuppressLight</label>
+    <label><input type="checkbox" id="layer-edgesSuppressDark"> edgesSuppressDark</label>
+    <!-- <label><input type="checkbox" id="layer-brightRed" checked="checked"> brightRed</label> -->
     <label><input type="checkbox" id="layer-generalIllumination" checked="checked"> generalIllumination</label>
 </div>
 </div>
